src/styles/globals/_chapter.css
/* ... */
.chapter[chapter-padding-top="m"] {
    --chapter-padding-top: calc(var(--spacing-between-elements-normal) * 1.5) !important;
}

.chapter[chapter-padding-bottom="m"] {
    --chapter-padding-bottom: calc(var(--spacing-between-elements-normal) * 1.5) !important;
}

.chapter[chapter-padding-top="l"] {
    --chapter-padding-top: calc(var(--spacing-between-elements-normal) * 2) !important;
}

.chapter[chapter-padding-bottom="l"] {
    --chapter-padding-bottom: calc(var(--spacing-between-elements-normal) * 2) !important;
}

.chapter[chapter-padding-top="xl"] {
    --chapter-padding-top: calc(var(--spacing-between-elements-normal) * 3) !important;
}

.chapter[chapter-padding-bottom="xl"] {
    --chapter-padding-bottom: calc(var(--spacing-between-elements-normal) * 3) !important;
}

.chapter[chapter-margin-top="none"] {
    --chapter-margin-top: 0 !important;
}

.chapter[chapter-margin-bottom="none"] {
    --chapter-margin-bottom: 0 !important;
}

.chapter[chapter-margin-top="xs"] {
    --chapter-margin-top: calc(var(--spacing-between-elements-normal) / 4) !important;
}

.chapter[chapter-margin-bottom="xs"] {
    --chapter-margin-bottom: calc(var(--spacing-between-elements-normal) / 4) !important;
}

.chapter[chapter-margin-top="s"] {
    --chapter-margin-top: calc(var(--spacing-between-elements-normal) / 2) !important;
}

.chapter[chapter-margin-bottom="s"] {
    --chapter-margin-bottom: calc(var(--spacing-between-elements-normal) / 2) !important;
}

.chapter[chapter-margin-top="base"] {
    --chapter-margin-top: var(--spacing-between-elements-normal) !important;
}

.chapter[chapter-margin-bottom="base"] {
    --chapter-margin-bottom: var(--spacing-between-elements-normal) !important;
}

.chapter[chapter-margin-top="m"] {
    --chapter-margin-top: calc(var(--spacing-between-elements-normal) * 1.5) !important;
}

.chapter[chapter-margin-bottom="m"] {
    --chapter-margin-bottom: calc(var(--spacing-between-elements-normal) * 1.5) !important;
}

.chapter[chapter-margin-top="l"] {
    --chapter-margin-top: calc(var(--spacing-between-elements-normal) * 2) !important;
}

.chapter[chapter-margin-bottom="l"] {
    --chapter-margin-bottom: calc(var(--spacing-between-elements-normal) * 2) !important;
}

.chapter[chapter-margin-top="xl"] {
    --chapter-margin-top: calc(var(--spacing-between-elements-normal) * 3) !important;
}

.chapter[chapter-margin-bottom="xl"] {
    --chapter-margin-bottom: calc(var(--spacing-between-elements-normal) * 3) !important;
}

*:not(span, .chapter) + .chapter:not(:first-child) {
    margin-top: var(--spacing-between-elements-normal);
}

.chapter[background-color="background"] + .chapter[background-color="background"],
.chapter[background-color="background"] + span + .chapter[background-color="background"],
.chapter[background-color="primary"] + .chapter[background-color="primary"],
.chapter[background-color="primary"] + span + .chapter[background-color="primary"],
.chapter[background-color="primary-light"] + .chapter[background-color="primary-light"],
.chapter[background-color="primary-light"] + span + .chapter[background-color="primary-light"],
.chapter[background-color="primary-o-10"] + .chapter[background-color="primary-o-10"],
.chapter[background-color="primary-o-10"] + span + .chapter[background-color="primary-o-10"],
.chapter[background-color="primary-dark"] + .chapter[background-color="primary-dark"],
.chapter[background-color="primary-dark"] + span + .chapter[background-color="primary-dark"],
.chapter[background-color="secondary"] + .chapter[background-color="secondary"],
.chapter[background-color="secondary"] + span + .chapter[background-color="secondary"],
.chapter[background-color="secondary-light"] + .chapter[background-color="secondary-light"],
.chapter[background-color="secondary-light"] + span + .chapter[background-color="secondary-light"],
.chapter[background-color="secondary-dark"] + .chapter[background-color="secondary-dark"],
.chapter[background-color="secondary-dark"] + span + .chapter[background-color="secondary-dark"],
.chapter[background-color="font"] + .chapter[background-color="font"],
.chapter[background-color="font"] + span + .chapter[background-color="font"],
.chapter[background-color="font-light"] + .chapter[background-color="font-light"],
.chapter[background-color="font-light"] + span + .chapter[background-color="font-light"],
.chapter[background-color="font-dark"] + .chapter[background-color="font-dark"],
.chapter[background-color="font-dark"] + span + .chapter[background-color="font-dark"] {
    padding-top: var(--spacing-normal);
}

.chapter[background-color="background"]:has(+ span + .chapter[background-color="background"]),
.chapter[background-color="primary"]:has(+ span + .chapter[background-color="primary"]),
.chapter[background-color="primary-light"]:has(+ span + .chapter[background-color="primary-light"]),
.chapter[background-color="primary-o-10"]:has(+ span + .chapter[background-color="primary-o-10"]),
.chapter[background-color="primary-dark"]:has(+ span + .chapter[background-color="primary-dark"]),
.chapter[background-color="secondary"]:has(+ span + .chapter[background-color="secondary"]),
.chapter[background-color="secondary-light"]:has(+ span + .chapter[background-color="secondary-light"]),
.chapter[background-color="secondary-dark"]:has(+ span + .chapter[background-color="secondary-dark"]),
.chapter[background-color="font"]:has(+ span + .chapter[background-color="font"]),
.chapter[background-color="font-light"]:has(+ span + .chapter[background-color="font-light"]),
.chapter[background-color="font-dark"]:has(+ span + .chapter[background-color="font-dark"]) {
    padding-bottom: var(--spacing-normal);
}

.chapter--primary,
.chapter[background-color="primary"] {
    --chapter-background-color: var(--chapter-primary-color-original);
}

.chapter[background-color="primary-light"] {
    --chapter-background-color: var(--chapter-primary-color-light-original);
}
/* ... */

